name:                nasa
version:             0.1.0
synopsis:            ...
description:         ...
license:             MIT
license-file:        LICENSE
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
category:            Archaeoinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

executable nasa
    main-is:            Main-nasa.hs
    hs-source-dirs:     src-executables
    build-depends:      base, optparse-applicative, filepath, aeson, bytestring, yaml,
                        directory
    other-modules:      Paths_nasa
    default-language:   Haskell2010

