name:                nassa
version:             0.1.0
synopsis:            ...
description:         ...
license:             MIT
license-file:        LICENSE
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
category:            Archaeoinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

executable nassa
    main-is:            Main-nassa.hs
    hs-source-dirs:     src-executables
    build-depends:      base, optparse-applicative, filepath, aeson, bytestring, yaml,
                        directory, table-layout
    other-modules:      Paths_nassa
    default-language:   Haskell2010

