name:                nassa
version:             0.1.0
synopsis:            ...
description:         ...
license:             MIT
license-file:        LICENSE
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
category:            Archaeoinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

library
    exposed-modules:    NASSA.Types, NASSA.Utils
                        NASSA.CLI.List
    hs-source-dirs:     src
    build-depends:      base, filepath, filepath, aeson, bytestring, yaml,
                        directory, table-layout
    default-language:   Haskell2010

executable nassa
    main-is:            Main-nassa.hs
    hs-source-dirs:     src-executables
    build-depends:      nassa, base, optparse-applicative, filepath
    other-modules:      Paths_nassa
    default-language:   Haskell2010

