name:                nassa
version:             0.6.0
synopsis:            A package to validate NASSA modules
description:         NASSA maintains a library of agent-based-modelling algorithms in individual code modules. Each module is defined by a NASSA.yml file. nassa-hs validates these .yml files.
license:             MIT
license-file:        LICENSE
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
category:            Archaeoinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

library
    exposed-modules:    NASSA.Types, NASSA.Utils, NASSA.ReadYml
                        NASSA.CLI.List, NASSA.CLI.Validate, NASSA.BibTeX
    hs-source-dirs:     src
    build-depends:      base, filepath, aeson, bytestring, yaml,
                        directory, table-layout, time, parsec, email-validate,
                        text
    default-language:   Haskell2010

executable nassa
    main-is:            Main-nassa.hs
    hs-source-dirs:     src-executables
    build-depends:      nassa, base, optparse-applicative, filepath
    other-modules:      Paths_nassa
    default-language:   Haskell2010

